--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,38 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
     namespace 'space.rozlach.testtaskproject'
-    compileSdk 32
+    compileSdk 31
 
     defaultConfig {
         applicationId "space.rozlach.testtaskproject"
-        minSdk 28
+        minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
+    buildFeatures {
+        compose true // Enable Jetpack Compose
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion "1.0.5" // Jetpack Compose version
     }
 
     buildTypes {
@@ -23,30 +41,35 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
 }
 
 dependencies {
     // Jetpack Compose
-    implementation "androidx.compose.ui:ui:1.6.3"
-    implementation "androidx.compose.material:material:1.6.3"
-    implementation "androidx.activity:activity-compose:1.8.2"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.0-alpha02"
+    implementation "androidx.compose.ui:ui:1.0.5" // Jetpack Compose
+    implementation "androidx.compose.material:material:1.0.5" // Jetpack Compose Material
+    implementation "androidx.activity:activity-compose:1.3.1" // Jetpack Compose Activity
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07" // Jetpack Compose ViewModel
 
 // Firebase Realtime Database
-    implementation "com.google.firebase:firebase-database-ktx:20.3.1"
+    implementation "com.google.firebase:firebase-database-ktx:20.0.4"
 
 // Koin
-    implementation "io.insert-koin:koin-android:3.2.2"
+//    implementation "io.insert-koin:koin-android:3.2.2"
+
+    //kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10" // Update to the latest version
+
+    // Dagger Hilt
+    implementation "com.google.dagger:hilt-android:2.40.5"
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.9'// Dagger Hilt
+    kapt "com.google.dagger:hilt-compiler:2.40.5" // Dagger Hilt annotation processor
+
 
 // Testing
     testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test.ext:junit:1.1.5"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+
+    implementation 'com.google.android.material:material:1.5.0' // Material Design components
+    implementation 'androidx.appcompat:appcompat:1.4.0' // AppCompat Library
 }
