--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    buildscript {
+        repositories {
+            google()
+            mavenCentral()
+        }
+        dependencies {
+            classpath "com.android.tools.build:gradle:7.1.0" // Update to the latest version
+            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31" // Update to the latest version
+            classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.5' // Dagger Hilt Gradle plugin
+        }
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+//    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+//    id 'com.google.dagger.hilt.android' version '2.40.2' apply false
 }
