--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -12,7 +13,7 @@ android {
     defaultConfig {
         applicationId "space.rozlach.testtaskproject"
         minSdk 21
-        targetSdk 32
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -45,31 +46,82 @@ android {
 
 dependencies {
     // Jetpack Compose
-    implementation "androidx.compose.ui:ui:1.0.5" // Jetpack Compose
-    implementation "androidx.compose.material:material:1.0.5" // Jetpack Compose Material
-    implementation "androidx.activity:activity-compose:1.3.1" // Jetpack Compose Activity
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07" // Jetpack Compose ViewModel
+//    implementation "androidx.compose.ui:ui:1.0.5" // Jetpack Compose
+//    implementation "androidx.compose.material:material:1.0.5" // Jetpack Compose Material
+//    implementation "androidx.activity:activity-compose:1.3.1" // Jetpack Compose Activity
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07" // Jetpack Compose ViewModel
+//
+//    // Navigation
+//    implementation "androidx.navigation:navigation-compose:2.8.0-alpha04"
+//
+//    // Hilt Navigation Compose
+//    implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
+//
+//
+//// Firebase Realtime Database
+////    implementation "com.google.firebase:firebase-database-ktx:20.0.4"
+//
+//// Koin
+////    implementation "io.insert-koin:koin-android:3.2.2"
+//
+//    //kotlin
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10" // Update to the latest version
+//
+//    // Dagger Hilt
+//    implementation "com.google.dagger:hilt-android:2.40.5"
+//    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.9'
+//    implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
+//    implementation 'com.google.firebase:firebase-database:20.0.4'// Dagger Hilt
+//    kapt "com.google.dagger:hilt-compiler:2.40.5" // Dagger Hilt annotation processor
+//
+//
+//// Testing
+//    testImplementation "junit:junit:4.13.2"
+//    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+//    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+//
+//    implementation 'com.google.android.material:material:1.5.0' // Material Design components
+//    implementation 'androidx.appcompat:appcompat:1.4.0' // AppCompat Library
 
-// Firebase Realtime Database
-    implementation "com.google.firebase:firebase-database-ktx:20.0.4"
 
-// Koin
-//    implementation "io.insert-koin:koin-android:3.2.2"
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.activity:activity-compose:1.3.1'
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
-    //kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10" // Update to the latest version
+    // Compose dependencies
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.17.0"
 
-    // Dagger Hilt
-    implementation "com.google.dagger:hilt-android:2.40.5"
-    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.9'// Dagger Hilt
-    kapt "com.google.dagger:hilt-compiler:2.40.5" // Dagger Hilt annotation processor
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
 
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
-// Testing
-    testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    //Dagger - Hilt
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.37"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
 
-    implementation 'com.google.android.material:material:1.5.0' // Material Design components
-    implementation 'androidx.appcompat:appcompat:1.4.0' // AppCompat Library
+        implementation 'com.google.firebase:firebase-database:20.0.4'// Dagger Hilt
+//    implementation 'com.google.firebase:firebase-database:20.3.1'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
+
