--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,19 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
+    id 'kotlin-parcelize'
+    id 'com.google.devtools.ksp' version '1.6.10-1.0.2'
+}
+
+kotlin {
+    sourceSets {
+        debug {
+            kotlin.srcDir("build/generated/ksp/debug/kotlin")
+        }
+        release {
+            kotlin.srcDir("build/generated/ksp/release/kotlin")
+        }
+    }
 }
 
 android {
@@ -33,7 +46,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion "1.0.5" // Jetpack Compose version
+        kotlinCompilerExtensionVersion compose_version // Jetpack Compose version
     }
 
     buildTypes {
@@ -45,45 +58,6 @@ android {
 }
 
 dependencies {
-    // Jetpack Compose
-//    implementation "androidx.compose.ui:ui:1.0.5" // Jetpack Compose
-//    implementation "androidx.compose.material:material:1.0.5" // Jetpack Compose Material
-//    implementation "androidx.activity:activity-compose:1.3.1" // Jetpack Compose Activity
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07" // Jetpack Compose ViewModel
-//
-//    // Navigation
-//    implementation "androidx.navigation:navigation-compose:2.8.0-alpha04"
-//
-//    // Hilt Navigation Compose
-//    implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
-//
-//
-//// Firebase Realtime Database
-////    implementation "com.google.firebase:firebase-database-ktx:20.0.4"
-//
-//// Koin
-////    implementation "io.insert-koin:koin-android:3.2.2"
-//
-//    //kotlin
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.10" // Update to the latest version
-//
-//    // Dagger Hilt
-//    implementation "com.google.dagger:hilt-android:2.40.5"
-//    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.9'
-//    implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
-//    implementation 'com.google.firebase:firebase-database:20.0.4'// Dagger Hilt
-//    kapt "com.google.dagger:hilt-compiler:2.40.5" // Dagger Hilt annotation processor
-//
-//
-//// Testing
-//    testImplementation "junit:junit:4.13.2"
-//    androidTestImplementation "androidx.test.ext:junit:1.1.3"
-//    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
-//
-//    implementation 'com.google.android.material:material:1.5.0' // Material Design components
-//    implementation 'androidx.appcompat:appcompat:1.4.0' // AppCompat Library
-
-
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -120,8 +94,13 @@ dependencies {
 
         implementation 'com.google.firebase:firebase-database:20.0.4'// Dagger Hilt
 //    implementation 'com.google.firebase:firebase-database:20.3.1'
-
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.2'
+    implementation 'io.github.raamcosta.compose-destinations:core:1.1.2-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.1.2-beta'
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+// Compose Nav Destinations
+
 
